fix overflow overlapping issue

--- a/app/public/styles/scss/main.scss
+++ b/app/public/styles/scss/main.scss
@@ -144,6 +144,7 @@ html, body{
             div {
                 @extend .flex-col;
                 width: 50%;
+                flex-shrink: 0;
             }
 
             .user-name {
